--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,9 @@
       <!--{% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}-->
+      {% for page in site.pages %}
+        <a href={{ page.filename }}>{{ page.title }}</a>
+      {% endfor %}
     </header>
 
     <main id="content" class="main-content" role="main">
