--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,9 +25,9 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-      {% for page in site.pages %}
+      <!--{% for page in site.pages %}
         <a href={{ page.filename }}>{{ page.title }}</a>
-      {% endfor %}
+      {% endfor %}-->
     </header>
 
     <main id="content" class="main-content" role="main">
