--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-      <a class="button" href="/portfolio/test/">test</a>
+      <button><a href="/portfolio/test/">test</a></button>
       <!--{% for page in site.pages %}
         <a href={{ page.filename }}>{{ page.title }}</a>
       {% endfor %}-->
