--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,7 +9,7 @@
 }
 .button {
   padding: 15px;
-  border-radius: 50%;
+  border-radius: 15px 35px;
   transition-duration: 0.4s;
 }
 .button:hover {
