--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,14 +6,13 @@
   h1 {
    color: #ff0000;
  }
+  button {
+   padding: 25px 25px; 
+  }
 }
 .button {
   transition-duration: 0.4s;
 }
 .button:hover {
   background-color: #ebeef5; /* Grey */
-}
-.div-button {
-  padding: 25px; 
-  margin: 25px;
 }
