--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-      <button><a href="/portfolio/" style="text-decoration: none;">Introduction</a></button><button><a href="/portfolio/design/">Algorithms and Design</a></button><button><a href="/portfolio/database/">Database Integration</a></button>
+      <button><a href="/portfolio/" style="text-decoration: none;">Introduction</a></button><button><a href="/portfolio/design/" style="text-decoration: none;">Algorithms and Design</a></button><button><a href="/portfolio/database/" style="text-decoration: none;">Database Integration</a></button>
     </header>
 
     <main id="content" class="main-content" role="main">
