--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,6 +9,8 @@
 }
 .button {
   transition-duration: 0.4s;
+  margin: 50px;
+  padding: 50px;
 }
 .button:hover {
   background-color: #ebeef5; /* Grey */
