--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,15 +7,17 @@
    color: #ff0000;
  }
 }
-.button {
+.page-header {
+  button {
+    transition-duration: 0.4s;
+  }
+  button:hover {
+    background-color: #ebeef5; /* Grey */
+  }
+}
+/*.button {
   transition-duration: 0.4s;
-  margin: 50px;
-  padding: 50px;
 }
 .button:hover {
   background-color: #ebeef5; /* Grey */
-}
-.custom {
-  margin: 50px;
-  padding: 50px;
-}
+/*}*/
