--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,16 +9,11 @@
 }
 .page-header {
   button {
-    padding: 15px 15px;
+    padding: 5px 5px;
+    margin: 5px 5px;
     transition-duration: 0.4s;
   }
   button:hover {
     background-color: #ebeef5; /* Grey */
   }
 }
-/*.button {
-  transition-duration: 0.4s;
-}
-.button:hover {
-  background-color: #ebeef5; /* Grey */
-/*}*/
