--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,6 +11,7 @@
   button {
     padding: 5px 5px;
     margin: 5px 5px;
+    border-radius: 10px;
     transition-duration: 0.4s;
   }
   button:hover {
