--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,6 +13,6 @@
     transition-duration: 0.4s;
   }
   button:hover {
-    background-color: #b7b7b7; /* Dark Grey */
+    background-color: #929292; /* Dark Grey */
   }
 }
